--- a/static/layout.css
+++ b/static/layout.css
@@ -3,8 +3,9 @@
 }
 
 #nav-menu a:hover{
-	background-color:  #CE0A0A;
+	background-color:  #d43f3a;
 	text-decoration: underline;
+	border-color: #C23833;
 }
 
 header{
@@ -12,7 +13,7 @@ header{
 }
 
 .top-layout{
-	background-color:  #CE0A0A;
+	background-color:  #d43f3a;
 	color: #FFFFFF;
 	padding-top: 100px;
 }
@@ -38,7 +39,7 @@ h1{
 }
 
 footer{
-	background-color:  #CE0A0A;
+	background-color:  #d43f3a;
     color: #ffffff;
     margin-top: 50px;
     font-size: 14px;
@@ -48,7 +49,7 @@ footer{
 	color: #FFFFFF;
 	padding-top: 50px;
 	padding-bottom: 50px;
-	background-color:  #CE0A0A;
+	background-color:  #d43f3a;
 	margin-bottom: 0px;
 }
 
@@ -59,7 +60,7 @@ footer{
 
 .foot-layout a{
 	font-size: 14px;
-	color: #CFCFCF;
+	color: #EAEAEA;
 }
 
 html{
