icon, fornecedor, logo, titulo

--- a/static/layout.css
+++ b/static/layout.css
@@ -55,6 +55,10 @@ h1{
 	font-family: 'Cutive', serif;
 }
 
+h3{
+	font-family: 'Palanquin', sans-serif;
+}
+
 .my-btn{
 	font-weight: bold;
 	padding-top: 17px;
