--- a/templates/layout/layout1.html
+++ b/templates/layout/layout1.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="../../static/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../../static/css/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Bubblegum+Sans" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -38,7 +39,8 @@
 			<div class="container text-center">
 			<!-- Conteudo topo -->
 			
-			<p><img src="../../static/img/lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
+				<p class="text-center"><img src="../../static/img/lorenzo.png" height="200" width="200" class=""></p>
+				<h1 style="font-family: 'Bubblegum Sans', cursive; font-size: 80px;">My Restaurant</h1>
 
 			<!-- Fim conteudo -->
 			</div>
@@ -58,7 +60,7 @@
 				<ul class="list-inline">
 					<li><p><a>GitHub</a></p></li>
 				</ul>
-				<p>Projetado para a disciplina de banco de dado 1 pelos alunos <a href="">Igor</a> e <a href="">João</a></p>
+				<p>Projetado para a disciplina de banco de dado 1 pelos alunos <a href="">Igor</a> e <a href="">João</a> <br>Feito com o <a href="#">Python</a></p>
 			</div>
 			<!-- fim conteudo -->
 		</div>
