--- a/templates/clientes.html
+++ b/templates/clientes.html
@@ -9,7 +9,7 @@
 		<div class="container text-center conteudo">
 			<h2>Clientes</h2>
 			<div class="container separete-margim">
-				<a href="./selecionar_cliente.html" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR CLIENTE</a>
+				<a href="{{ url_for('search_cliente') }}" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR CLIENTE</a>
 			</div>
 			<div class="container separete-margim">
 				<a href="{{ url_for('cadastro_cliente') }}" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR CLIENTE</a>
