--- a/templates/funcionarios.html
+++ b/templates/funcionarios.html
@@ -12,7 +12,7 @@
 				<a href="#" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR FUNCIONARIO</a>
 			</div>
 			<div class="container separete-margim">
-				<a href="./cadastrar_funcionarios.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR FUNCIONARIO</a>
+				<a href="{{ url_for('cadastro_funcionario') }}" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR FUNCIONARIO</a>
 			</div>
 		</div>
 
