--- a/templates/layout/layout1.html
+++ b/templates/layout/layout1.html
@@ -27,9 +27,9 @@
 		    	<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav">
 						<!-- Itens Menu -->
-	      				<li><a href="{{ url_for('pedidos') }}">Pedidos</a></li>
-	      				<li><a href="{{ url_for('clientes') }}">Clientes</a></li>
-	      				<li><a href="{{ url_for('funcionarios') }}">Funcionarios</a></li>
+	      				<li><a href="{{ url_for('pedido') }}">Pedidos</a></li>
+	      				<li><a href="{{ url_for('cliente') }}">Clientes</a></li>
+	      				<li><a href="{{ url_for('funcionario') }}">Funcionarios</a></li>
 	      				<li><a href="{{ url_for('restaurante') }}">Restaurante</a></li>
 	      			</ul>
 				</div>
