--- a/templates/cadastrar_funcionarios.html
+++ b/templates/cadastrar_funcionarios.html
@@ -7,12 +7,12 @@
 {% block conteudo %}
 	<!-- Conteudo site -->
 		<div class="container text-center conteudo">
-			<h2>Pedidos</h2>
+			<h2 class="text-center">Cadastrar Funcionarios</h2>
 			<div class="container separete-margim">
-				<a href="{{ url_for('search_pedido') }}" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR PEDIDO</a>
+				<a href="./cadastro/cadastro_garcom.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR GARÇOM</a>
 			</div>
 			<div class="container separete-margim">
-				<a href="{{ url_for('cadastro_pedido') }}" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR PEDIDO</a>
+				<a href="{{ url_for('cadastro_cozinheiro') }}" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR COZINHEIRO</a>
 			</div>
 		</div>
 
