--- a/templates/cadastrar_funcionarios.html
+++ b/templates/cadastrar_funcionarios.html
@@ -9,7 +9,7 @@
 		<div class="container text-center conteudo">
 			<h2 class="text-center">Cadastrar Funcionarios</h2>
 			<div class="container separete-margim">
-				<a href="./cadastro/cadastro_garcom.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR GARÇOM</a>
+				<a href="{{ url_for('cadastro_garcom') }}" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR GARÇOM</a>
 			</div>
 			<div class="container separete-margim">
 				<a href="{{ url_for('cadastro_cozinheiro') }}" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR COZINHEIRO</a>
