--- a/templates/cadastro/cadastro_cozinheiro.html
+++ b/templates/cadastro/cadastro_cozinheiro.html
@@ -12,20 +12,20 @@
 		<div class="container">
 			<form action="{{ url_for('funcionario_submit', funcao='cozinheiro') }}" method="post" accept-charset="utf-8">
 				<div class="form-group">
-					<label for="nome_cozinheiro">Nome Funcionario</label>
-					<input type="text" name="nome_cozinheiro" id="nome_cozinheiro" class="form-control">	
+					<label for="nome_funcionario">Nome Funcionario</label>
+					<input type="text" name="nome_funcionario" id="nome_funcionario" class="form-control">	
 				</div>
 				<div class="form-group">
-					<label for="sal_cozinheiro">Salario Funcionario</label>
-					<input type="text" name="sal_cozinheiro" id="sal_cozinheiro" class="form-control">	
+					<label for="sal_funcionario">Salario Funcionario</label>
+					<input type="text" name="sal_funcionario" id="sal_funcionario" class="form-control">	
 				</div>
 				<div class="form-group">
-					<label for="cpf_cozinheiro">CPF</label>
-					<input type="text" name="cpf_cozinheiro" id="cpf_cozinheiro" class="form-control">	
+					<label for="cpf_funcionario">CPF</label>
+					<input type="text" name="cpf_funcionario" id="cpf_funcionario" class="form-control">	
 				</div>
 				<div class="form-group">
-					<label for="cpf_cozinheiro">CPF do superior</label>
-					<input type="text" name="cpf_cozinheiro" id="cpf_cozinheiro" class="form-control">	
+					<label for="cpf_chefe">CPF do superior</label>
+					<input type="text" name="cpf_chefe" id="cpf_chefe" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
