--- a/templates/fornecedor.html
+++ b/templates/fornecedor.html
@@ -1,21 +1,22 @@
 {% extends "layout/layout1.html" %}
 
 {% block title %}
-	Funcionarios
+	Fornecedor
 {% endblock %}
 
 {% block conteudo %}
 	<!-- Conteudo site -->
 		<div class="container text-center conteudo">
-			<h2>Funcionarios</h2>
+			<h2>Fornecedor</h2>
 			<div class="container separete-margim">
-				<a href="./selecionar_funcionario.html" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR FUNCIONARIO</a>
+				<a href="./selecionar_fornecedor.html" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR FORNECEDOR</a>
 			</div>
 			<div class="container separete-margim">
-				<a href="./cadastrar_funcionarios.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR FUNCIONARIO</a>
+				<a href="cadastro/cadastro_fornecedor.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR FORNECEDOR</a>
 			</div>
 		</div>
 
 
 	<!-- Fim conteudo -->
 {% endblock %}
+	
