--- a/templates/pedidos.html
+++ b/templates/pedidos.html
@@ -9,10 +9,10 @@
 		<div class="container text-center conteudo">
 			<h2>Pedidos</h2>
 			<div class="container separete-margim">
-				<a href="{{ url_for('search_pedido') }}" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR PEDIDO</a>
+				<a href="./selecionar_pedido.html" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR PEDIDO</a>
 			</div>
 			<div class="container separete-margim">
-				<a href="{{ url_for('cadastro_pedido') }}" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR PEDIDO</a>
+				<a href="cadastro/cadastro_pedido.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR PEDIDO</a>
 			</div>
 		</div>
 
