--- a/templates/cadastro/cadastro_fornecedor.html
+++ b/templates/cadastro/cadastro_fornecedor.html
@@ -1,20 +1,23 @@
 {% extends "layout/layout1.html" %}
 
 {% block title %}
-	Cadastrar Pedido
+	Cadastrar Fornecedor
 {% endblock %}
 
 {% block conteudo %}
 	<!-- Conteudo site -->
 	<div class="container conteudo">
 			
-		<h2 class="text-center">Cadastrar Pedido</h2>
+		<h2 class="text-center">Cadastrar Fornecedor</h2>
 		<div class="container">
 			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
 				<div class="form-group">
-					<!-- Com o numero da mesa é possivel descobrir o id do cliente que fez a reserva -->
-					<label for="nro_Mesa">Numero Mesa</label>
-					<input type="text" name="nroMesa" id="nroMesa" class="form-control">	
+					<label for="nome_fornecedor">Nome Fornecedor</label>
+					<input type="text" name="nome_fornecedor" id="nome_fornecedor" class="form-control">	
+				</div>
+				<div class="form-group">
+					<label for="tel_fornecedor">Telefone Fornecedor</label>
+					<input type="tel" name="tel_fornecedor" id="tel_fornecedor" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
