--- a/templates/cadastro/cadastro_ingredientes.html
+++ b/templates/cadastro/cadastro_ingredientes.html
@@ -1,23 +1,22 @@
 {% extends "layout/layout1.html" %}
 
 {% block title %}
-	Cadastrar Funcionario
+	Cadastrar Ingrediente
 {% endblock %}
 
-{% block conteudo %}
-	<!-- Conteudo site -->
+{% block conteudo %}	<!-- Conteudo site -->
 	<div class="container conteudo">
 			
-		<h2 class="text-center">Cadastrar Funcionario</h2>
+		<h2 class="text-center">Cadastrar Ingrediente</h2>
 		<div class="container">
 			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
 				<div class="form-group">
-					<label for="nome_funcionario">Nome Funcionario</label>
-					<input type="text" name="nome_funcionario" id="nome_funcionario" class="form-control">	
+					<label for="nome_ingrediente">Nome Ingrediente</label>
+					<input type="text" name="nome_ingrediente" id="nome_ingrediente" class="form-control">	
 				</div>
 				<div class="form-group">
-					<label for="sal_funcionario">Salario Funcionario</label>
-					<input type="text" name="sal_funcionario" id="sal_funcionario" class="form-control">	
+					<label for="qnt_ingrediente">Quantidade Total Ingrediente</label>
+					<input type="text" name="qtd_ingrediente" id="qtd_ingrediente" class="form-control">
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
@@ -27,4 +26,4 @@
 	</div>
 
 	<!-- Fim conteudo -->
-	{% endblock %}
+{% endblock %}
