--- a/templates/cadastro/cadastro_mesa.html
+++ b/templates/cadastro/cadastro_mesa.html
@@ -1,20 +1,23 @@
 {% extends "layout/layout1.html" %}
 
 {% block title %}
-	Cadastrar Pedido
+	Cadastrar Mesa
 {% endblock %}
 
 {% block conteudo %}
 	<!-- Conteudo site -->
 	<div class="container conteudo">
 			
-		<h2 class="text-center">Cadastrar Pedido</h2>
+		<h2 class="text-center">Cadastrar Mesa</h2>
 		<div class="container">
 			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
 				<div class="form-group">
-					<!-- Com o numero da mesa é possivel descobrir o id do cliente que fez a reserva -->
-					<label for="nro_Mesa">Numero Mesa</label>
-					<input type="text" name="nroMesa" id="nroMesa" class="form-control">	
+					<label for="numero_de_pessoas">Numero de Pessoas Mesa</label>
+					<input type="text" name="numero_de_pessoas" id="numero_de_pessoas" class="form-control">	
+				</div>
+					<div class="form-group">
+					<label for="numero_da_mesa">Numero da Mesa</label>
+					<input type="text" name="numero_da_mesa" id="numero_da_mesa" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
