--- a/templates/cadastro/cadastro_prato.html
+++ b/templates/cadastro/cadastro_prato.html
@@ -1,20 +1,20 @@
 {% extends "layout/layout1.html" %}
 
 {% block title %}
-	Cadastrar Pedido
+	Cadastrar Prato
 {% endblock %}
 
 {% block conteudo %}
+
 	<!-- Conteudo site -->
 	<div class="container conteudo">
 			
-		<h2 class="text-center">Cadastrar Pedido</h2>
+		<h2 class="text-center">Cadastrar Prato</h2>
 		<div class="container">
 			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
 				<div class="form-group">
-					<!-- Com o numero da mesa é possivel descobrir o id do cliente que fez a reserva -->
-					<label for="nro_Mesa">Numero Mesa</label>
-					<input type="text" name="nroMesa" id="nroMesa" class="form-control">	
+					<label for="nome_prato">Nome Prato</label>
+					<input type="text" name="nome_prato" id="nome_prato" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
