--- a/templates/cadastro/cadastro_restaurante.html
+++ b/templates/cadastro/cadastro_restaurante.html
@@ -1,11 +1,10 @@
 {% extends "layout/layout1.html" %}
 
 {% block title %}
-	Cadastrar Funcionario
+	Cadastrar Funcionarios
 {% endblock %}
 
-{% block conteudo %}
-	<!-- Conteudo site -->
+{% block conteudo %}	<!-- Conteudo site -->
 	<div class="container conteudo">
 			
 		<h2 class="text-center">Cadastrar Funcionario</h2>
@@ -19,6 +18,14 @@
 					<label for="sal_funcionario">Salario Funcionario</label>
 					<input type="text" name="sal_funcionario" id="sal_funcionario" class="form-control">	
 				</div>
+				<div class="form-group">
+					<label for="status_funcionario">Status Funcionario</label>
+					<input type="text" name="status_funcionario" id="status_funcionario" class="form-control">	
+				</div>
+				<div class="form-group">
+					<label for="func_funcionario">Função Funcionario</label>
+					<input type="text" name="func_funcionario" id="func_funcionario" class="form-control">	
+				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
 				</div>
@@ -27,4 +34,4 @@
 	</div>
 
 	<!-- Fim conteudo -->
-	{% endblock %}
+{% endblock %}
