--- a/templates/layout/layout1.html
+++ b/templates/layout/layout1.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Bubblegum+Sans" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
+	<link rel="shortcut icon" href="{{ url_for('static', filename='img/lorenzo.ico') }}" type="image/x-icon" /> 
 </head>
 <body>
 	<header>
