--- a/templates/cadastro/cadastro_garcom.html
+++ b/templates/cadastro/cadastro_garcom.html
@@ -10,7 +10,7 @@
 			
 		<h2 class="text-center">Cadastrar Funcionario</h2>
 		<div class="container">
-			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
+			<form action="{{ url_for('funcionario_submit', funcao='garcom') }}" method="post" accept-charset="utf-8">
 				<div class="form-group">
 					<label for="nome_funcionario">Nome Funcionario</label>
 					<input type="text" name="nome_funcionario" id="nome_funcionario" class="form-control">	
@@ -18,6 +18,10 @@
 				<div class="form-group">
 					<label for="sal_funcionario">Salario Funcionario</label>
 					<input type="text" name="sal_funcionario" id="sal_funcionario" class="form-control">	
+				</div>
+				<div class="form-group">
+					<label for="cpf_funcionario">CPF Funcionario</label>
+					<input type="text" name="cpf_funcionario" id="cpf_funcionario" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
