--- a/templates/funcionarios.html
+++ b/templates/funcionarios.html
@@ -9,10 +9,10 @@
 		<div class="container text-center conteudo">
 			<h2>Funcionarios</h2>
 			<div class="container separete-margim">
-				<a href="./selecionar_funcionario.html" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR FUNCIONARIO</a>
+				<a href="{{ url_for('search_funcionario') }}" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR FUNCIONARIO</a>
 			</div>
 			<div class="container separete-margim">
-				<a href="./cadastrar_funcionarios.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR FUNCIONARIO</a>
+				<a href="{{ url_for('cadastro_funcionario') }}" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR FUNCIONARIO</a>
 			</div>
 		</div>
 
