--- a/templates/selecionar_cliente.html
+++ b/templates/selecionar_cliente.html
@@ -13,7 +13,7 @@
 		</div>	
 		<div class="container">
 			<!-- Pesquisa simples -->
-			<form action="#" method="post" accept-charset="utf-8">
+			<form action="{{ url_for('results_cliente_nome') }}" accept-charset="utf-8">
 				<div class="form-group">
 					<label for="nome_cliente">Nome Clientes</label>
 					<div class="input-group">
