--- a/templates/selecionar_pedido.html
+++ b/templates/selecionar_pedido.html
@@ -13,7 +13,7 @@
 		</div>	
 		<div class="container">
 			<!-- Pesquisa simples -->
-			<form action="#" method="post" accept-charset="utf-8">
+			<form action="{{url_for('results_pedido_nome')}}" method="post" accept-charset="utf-8">
 				<div class="form-group">
 					<label for="data_pedido">Data Pedido</label>
 					<div class="input-group">
@@ -27,7 +27,7 @@
 			</form>
 			<hr>
 			<!-- pesquisa Complexa -->
-			<form action="#" method="post" accept-charset="utf-8">
+			<form action="{{url_for('results_pedido_algo')}}" method="post" accept-charset="utf-8">
 				<div class="form-group">
 					<label for="data_pedido">Algo complexo</label>
 					<div class="input-group">
