--- a/templates/layout/layout1.html
+++ b/templates/layout/layout1.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>{% block title %}{% endblock %}</title>
-	<link rel="stylesheet" href="../../static/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../../static/css/layout.css">
+	<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/static/css/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Bubblegum+Sans" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,7 +40,7 @@
 			<div class="container text-center">
 			<!-- Conteudo topo -->
 			
-				<p class="text-center"><img src="../../static/img/lorenzo.png" height="200" width="200" class=""></p>
+				<p class="text-center"><img src="/static/img/lorenzo.png" height="200" width="200" class=""></p>
 				<h1 style="font-family: 'Bubblegum Sans', cursive; font-size: 80px;">My Restaurant</h1>
 
 			<!-- Fim conteudo -->
@@ -66,7 +66,7 @@
 			<!-- fim conteudo -->
 		</div>
 	</footer>
-	<script src="../../static/js/jquery.js"></script>
-	<script src="../../static/bootstrap/js/bootstrap.min.js"></script>
+	<script src="/static/js/jquery.js"></script>
+	<script src="/static/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
