--- a/templates/restaurante.html
+++ b/templates/restaurante.html
@@ -12,7 +12,7 @@
 				<a href="./fornecedor.html" class="btn btn-danger btn-block btn-lg my-btn">FORNECEDOR</a>
 			</div>
 			<div class="container separete-margim">
-				<a href="./cardapio.html" class="btn btn-danger btn-block btn-lg my-btn">CARDAPIO</a>
+				<a href="{{ url_for('cardapio') }}" class="btn btn-danger btn-block btn-lg my-btn">CARDAPIO</a>
 			</div>
 			<div class="container separete-margim">
 				<a href="./mesa.html" class="btn btn-danger btn-block btn-lg my-btn">MESAS</a>
