--- a/templates/cadastro/cadastro_prato.html
+++ b/templates/cadastro/cadastro_prato.html
@@ -11,7 +11,7 @@
 			
 		<h2 class="text-center">Cadastrar Prato</h2>
 		<div class="container">
-			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
+			<form action="{{ url_for('prato_submit') }}" method="post" accept-charset="utf-8">
 				<div class="form-group">
 					<label for="nome_prato">Nome Prato</label>
 					<input type="text" name="nome_prato" id="nome_prato" class="form-control">	
