--- a/templates/listar_resultados_cliente.html
+++ b/templates/listar_resultados_cliente.html
@@ -12,8 +12,8 @@
 {% block table_body %}
 	{% for row in results %}
 		<tr>
-			<td><a href="{{ action }}">{{ row[0] }}</a></td>
-			<td><a href="{{ action }}">{{ row[1] }}</a></td>
+			<td><a href="{{ url_for('exibir_clientes', nome=row[1], id=row[0])  }}">{{ row[0] }}</a></td>
+			<td><a href="{{ url_for('exibir_clientes', nome=row[1], id=row[0]) }}">{{ row[1] }}</a></td>
 		</tr>
 	{% endfor %}
 {% endblock %}
