--- a/templates/restaurante.html
+++ b/templates/restaurante.html
@@ -15,7 +15,7 @@
 				<a href="{{ url_for('cardapio') }}" class="btn btn-danger btn-block btn-lg my-btn">CARDAPIO</a>
 			</div>
 			<div class="container separete-margim">
-				<a href="./mesa.html" class="btn btn-danger btn-block btn-lg my-btn">MESAS</a>
+				<a href="{{ url_for('mesa') }}" class="btn btn-danger btn-block btn-lg my-btn">MESAS</a>
 			</div>
 			
 		</div>
