--- a/templates/cadastro/cadastro_mesa.html
+++ b/templates/cadastro/cadastro_mesa.html
@@ -12,12 +12,12 @@
 		<div class="container">
 			<form action="{{ url_for('mesa_submit') }}" method="post" accept-charset="utf-8">
 				<div class="form-group">
-					<label for="numero_de_pessoas">Numero de Pessoas Mesa</label>
-					<input type="text" name="numero_de_pessoas" id="numero_de_pessoas" class="form-control">	
-				</div>
-					<div class="form-group">
 					<label for="numero_da_mesa">Numero da Mesa</label>
 					<input type="text" name="numero_da_mesa" id="numero_da_mesa" class="form-control">	
+				</div>
+				<div class="form-group">
+					<label for="numero_de_pessoas">Numero de Pessoas</label>
+					<input type="text" name="numero_de_pessoas" id="numero_de_pessoas" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
