--- a/templates/exibir_mesa.html
+++ b/templates/exibir_mesa.html
@@ -7,19 +7,26 @@
 {% block conteudo %}
 	<!-- Conteudo site -->
 	{% for row in results %}
-	<div class="container text-justify">
-		<h2 class="text-center">Mesa</h2>
-		<ul class="my-list">
-				<li><p><div class="estilo">Numero da Mesa:</div>{{ row[0] }}  <a href="{{ url_for('numero_da_mesa', id=row[0]) }}" class="btn btn-default">alterar</a></p></li>
-				<hr>
-				<li><p><div class="estilo">Numero de Pessoas:</div>{{ row[1] }}  <a href="{{ url_for('numero_de_pessoas', id=row[1]) }}" class="btn btn-default">alterar</a></p></li>
-				<hr>
-		</ul>
-		<hr>
-		<div class="text-right">
-		<form method="post">
-			<button type="submit" formmethod="post" formaction="{{ url_for('rm_mesa', numero_da_mesa=row[0]}}" class="btn btn-default btn-sm">excluir mesa</button>
-		</form>
+	<div class="container text-center">
+		{% if alt == 'True' %}
+			<div class="alert alert-success" role="alert"><p>Alterações realizado com sucesso!</p></div>
+		{% endif %}
+		{% if alt == 'False' %}
+			<div class="alert alert-danger" role="alert"><p>Falha ao alterar dado!</p></div>
+		{% endif %}	
+		<div class="container text-justify">
+			<h2 class="text-center">Mesa</h2>
+			<ul class="my-list">
+					<li><p><div class="estilo">Numero da Mesa:</div>{{ row[0] }}  <a href="{{ url_for('numero_da_mesa', id=row[0]) }}" class="btn btn-default">alterar</a></p></li>
+					<hr>
+					<li><p><div class="estilo">Numero de Pessoas:</div>{{ row[1] }}  <a href="{{ url_for('numero_de_pessoas', id=row[1]) }}" class="btn btn-default">alterar</a></p></li>
+			</ul>
+			<hr>
+			<div class="text-right">
+			<form method="post">
+				<button type="submit" formmethod="post" formaction="{{ url_for('rm_mesa', nroMesa=row[0]) }}" class="btn btn-default btn-sm">excluir mesa</button>
+			</form>
+			</div>
 		</div>
 	</div>
 	{% endfor %}
