--- a/templates/selecionar_mesa.html
+++ b/templates/selecionar_mesa.html
@@ -13,7 +13,7 @@
 		</div>	
 		<div class="container">
 			<!-- Pesquisa simples -->
-			<form action="{{ url_for('results_numero_da_mesa') }}" method="post" accept-charset="utf-8">
+			<form action="{{ url_for('results_numero_da_mesa') }}" accept-charset="utf-8">
 				<div class="form-group">
 					<label for="numero_da_mesa">Numero mesa</label>
 					<div class="input-group">
@@ -26,7 +26,7 @@
 			</form>
 			<hr>
 			<!-- pesquisa Complexa -->
-			<form action="#" method="post" accept-charset="utf-8">
+			<form action="#" accept-charset="utf-8">
 				<div class="form-group">
 					<label for="numero_da_mesa">Algo complexo</label>
 					<div class="input-group">
