update mensagem alteracao

--- a/templates/exibir_mesa.html
+++ b/templates/exibir_mesa.html
@@ -9,7 +9,7 @@
 	{% for row in results %}
 	<div class="container text-center">
 		{% if alt == 'True' %}
-			<div class="alert alert-success" role="alert"><p>Alterações realizado com sucesso!</p></div>
+			<div class="alert alert-success" role="alert"><p>Alterações realizadas com sucesso!</p></div>
 		{% endif %}
 		{% if alt == 'False' %}
 			<div class="alert alert-danger" role="alert"><p>Falha ao alterar dado!</p></div>
