--- a/templates/cadastro/cadastro_reservas.html
+++ b/templates/cadastro/cadastro_reservas.html
@@ -10,18 +10,18 @@
 			
 		<h2 class="text-center">Cadastrar Reservas</h2>
 		<div class="container">
-			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
+			<form action="{{ url_for('mesa_reserva', id=id) }}" accept-charset="utf-8">
 				<div class="form-group">
 					<label for="data_reserva">Data Reserva</label>
-					<input type="text" name="data_reserva" id="data_reserva" class="form-control">	
+					<input type="date" name="data_reserva" id="data_reserva" class="form-control">	
 				</div>
 				<div class="form-group">
 					<label for="hora_reserva">Hora Reserva</label>
-					<input type="text" name="hora_reserva" id="hora_reserva" class="form-control">	
+					<input type="time" name="hora_reserva" id="hora_reserva" class="form-control">	
 				</div>
 				<div class="form-group">
-					<label for="numero_pessoas_reserva">Numero de Pessoas Reserva</label>
-					<input type="text" name="numero_pessoas_reserva" id="numero_pessoas_reserva" class="form-control">	
+					<label for="numero_de_pessoas">Numero de Pessoas Reserva</label>
+					<input type="number" name="numero_de_pessoas" id="numero_de_pessoas" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
