--- a/templates/cadastro/cadastro_pedido.html
+++ b/templates/cadastro/cadastro_pedido.html
@@ -10,11 +10,16 @@
 			
 		<h2 class="text-center">Cadastrar Pedido</h2>
 		<div class="container">
-			<form action="{{url_for('pedido_submit')}}" method="post" accept-charset="utf-8">
+			<form action="{{ url_for('pedido_submit') }}" method="post" accept-charset="utf-8">
 				<div class="form-group">
 					<!-- Com o numero da mesa é possivel descobrir o id do cliente que fez a reserva -->
 					<label for="nro_Mesa">Numero Mesa</label>
-					<input type="text" name="nroMesa" id="nroMesa" class="form-control">	
+					<input type="number" name="nroMesa" id="nroMesa" class="form-control">	
+				</div>
+				<div class="form-group">
+					<!-- cpf do garcom deveria estar logado, logo o cpf seria o do usuario logado -->
+					<label for="cpf_garcom">CPF do garçom</label>
+					<input type="text" name="cpf_garcom" id="cpf_garcom" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
