--- a/templates/cardapio.html
+++ b/templates/cardapio.html
@@ -14,7 +14,7 @@
 				<div class="alert alert-danger" role="alert"><p>Falha ao cadastrar cliente!</p></div>
 			{% endif %}
 			{% if rm == 'True' %}
-				<div class="alert alert-success" role="alert"><p>Cliente excluido com sucesso!</p></div>
+				<div class="alert alert-success" role="alert"><p>Prato excluido com sucesso!</p></div>
 			{% endif %}
 			{% if rm == 'False' %}
 				<div class="alert alert-danger" role="alert"><p>Falha ao excluir cliente!</p></div>
