--- a/templates/listar_resultados_pedido.html
+++ b/templates/listar_resultados_pedido.html
@@ -12,8 +12,8 @@
 {% block table_body %}
 	{% for row in results %}
 		<tr>
-			<td><a href="{{ url_for('exibir_prato', nome=row[1], id=row[0]) }}">{{ row[4] }}</a></td>
-			<td><a href="{{ url_for('exibir_prato', nome=row[1], id=row[0]) }}">{{ row[1] }}</a></td>
+			<td><a href="{{ url_for('exibir_pedido', id=row[0]) }}">{{ row[4] }}</a></td>
+			<td><a href="{{ url_for('exibir_pedido', id=row[0]) }}">{{ row[1] }}</a></td>
 		</tr>
 	{% endfor %}
 {% endblock %}
