--- a/templates/selecionar_reserva.html
+++ b/templates/selecionar_reserva.html
@@ -13,7 +13,7 @@
 		</div>	
 		<div class="container">
 			<!-- Pesquisa simples -->
-			<form action="#" method="post" accept-charset="utf-8">
+			<form action="{{ url_for('results_data_reserva') }}" method="post" accept-charset="utf-8">
 				<div class="form-group">
 					<label for="data_reserva">Data Reserva</label>
 					<div class="input-group">
