--- a/templates/cadastro/cadastro_reservas.html
+++ b/templates/cadastro/cadastro_reservas.html
@@ -21,7 +21,7 @@
 				</div>
 				<div class="form-group">
 					<label for="numero_de_pessoas">Numero de Pessoas Reserva</label>
-					<input type="number" name="numero_de_pessoas" id="numero_de_pessoas" class="form-control">	
+					<input type="num" name="numero_de_pessoas" id="numero_de_pessoas" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
