--- a/templates/restaurante.html
+++ b/templates/restaurante.html
@@ -9,6 +9,9 @@
 		<div class="container text-center conteudo">
 			<h2>Restaurante</h2>
 			<div class="container separete-margim">
+				<a href="{{ url_for('reserva') }}" class="btn btn-danger btn-block btn-lg my-btn">RESERVA</a>
+			</div>
+			<div class="container separete-margim">
 				<a href="{{ url_for('cardapio') }}" class="btn btn-danger btn-block btn-lg my-btn">CARDAPIO</a>
 			</div>
 			<div class="container separete-margim">
