--- a/templates/selecionar_funcionario.html
+++ b/templates/selecionar_funcionario.html
@@ -13,7 +13,7 @@ Selecionar Funcionario
 		</div>	
 		<div class="container">
 			<!-- Pesquisa simples -->
-			<form action="#" method="post" accept-charset="utf-8">
+			<form action="results_nome_funcionario" method="post" accept-charset="utf-8">
 				<div class="form-group">
 					<label for="nome_funcionario">Nome Funcionário</label>
 					<div class="input-group">
