--- a/templates/selecionar_reserva.html
+++ b/templates/selecionar_reserva.html
@@ -9,15 +9,21 @@
 
 	<div class="container conteudo">
 		<div class=" container text-center">	
+		{% if rm == 'True' %}
+			<div class="alert alert-success" role="alert"><p>Reserva excluida com sucesso!</p></div>
+		{% endif %}
+		{% if rm == 'False' %}
+			<div class="alert alert-danger" role="alert"><p>Falha ao excluir reserva!</p></div>
+		{% endif %}
 			<h2>Selecionar Reserva</h2>
 		</div>	
 		<div class="container">
 			<!-- Pesquisa simples -->
-			<form action="{{ url_for('results_data_reserva') }}" method="post" accept-charset="utf-8">
+			<form action="{{ url_for('results_data_reserva') }}" accept-charset="utf-8">
 				<div class="form-group">
 					<label for="data_reserva">Data Reserva</label>
 					<div class="input-group">
-						<input type="text" name="data_reserva" id="data_reserva" class="form-control" placeholder="Busca reserva pela data">
+						<input type="date" name="data_reserva" id="data_reserva" class="form-control" placeholder="Busca reserva pela data">
 						    <span class="input-group-btn">
 						    	<button type="submit" class="btn btn-danger">Buscar!</button>
 							</span>
